# sandbox

./: .gitignore  CMakeLists.txt  README.md
shaders/: default.fs  default.vs
src/: CMakeLists.txt  callbacks.cpp  callbacks.h  game.cpp  game.h  gl.h  grid.cpp  grid.h  main.cpp  math.cpp  math.h  ui.cpp  ui.h  window.cpp  window.h  world.cpp  world.h
src/cells/: CMakeLists.txt  cell.cpp  cell.h
src/pixels/: CMakeLists.txt  pixel.h  test_pixel.cpp  test_pixel.h
src/render/: CMakeLists.txt  quad.cpp  quad.h  shader.cpp  shader.h
